--- a/.github/workflows/nuitka_wasm.yml
+++ b/.github/workflows/nuitka_wasm.yml
@@ -23,8 +23,8 @@ jobs:
       - uses: actions/checkout@v2
       
       # Install libc6 32
-      - name: Install libc6 32
-        run: apt-get install -y libc6-dev-i386
+#       - name: Install libc6 32
+#         run: apt-get install -y libc6-dev-i386
 
       # Install Nuitka
       - name: Install Nuitka
